# api/models/staff.go
@@ -10,22 +10,21 @@ type Staff struct {
 	Name       string    `json:"name"`
 	Balance    string    `json:"balance"`
 	Age        int       `json:"age"`
-	BirthDate  int       `json:"birthdate"`
+	BirthDate  string    `json:"birthdate"`
 	Login      string    `json:"login"`
 	Password   string    `json:"password"`
 	Create_at  time.Time `json:"ctreate_at"`
 }
 
 type CreateStaff struct {
-	Branch_id       string `json:"branch_id"`
-	Tarif_id        string `json:"tarif_id"`
-	Type_stuff string    `json:"type_stuff"`
-	Name            string `json:"name"`
-	Balance         string `json:"balance"`
-	Age             int    `json:"age"`
-	BirthDate       int    `json:"birthdate"`
-	Login           string `json:"login"`
-	Password        string `json:"password"`
+	Branch_id  string `json:"branch_id"`
+	Tarif_id   string `json:"tarif_id"`
+	Type_stuff string `json:"type_stuff"`
+	Name       string `json:"name"`
+	Balance    string `json:"balance"`
+	BirthDate  string `json:"birthdate"`
+	Login      string `json:"login"`
+	Password   string `json:"password"`
 }
 
 type UpdateStaff struct {
@@ -35,10 +34,16 @@ type UpdateStaff struct {
 	Name      string `json:"name"`
 	Balance   string `json:"balance"`
 	Age       int    `json:"age"`
-	BirthDate int    `json:"birthdate"`
+	BirthDate string `json:"birthdate"`
 }
 
 type StaffRepo struct {
 	Staffs []Staff `json:"staffs"`
 	Count  int     `json:"count"`
+}
+
+type UpdateStaffPassword struct {
+	ID          string `json:"-"`
+	NewPassword string `json:"new_password"`
+	OldPassword string `json:"old_password"`
 }
